# auto-07p

./: CMakeLists.txt  m.patch  manual_build.sh
demos/: CMakeLists.txt
demos_c/: CMakeLists.txt
gui/: ZREADME.txt
plaut/: CMakeLists.txt
plaut04/includes/: gplaut04.h
plaut04/src/: CMakeLists.txt  gmainqt.c++  gmainqt.h  printToPS.c++  printToPS.h
src/: CMakeLists.txt
util/: CMakeLists.txt
